--- a/assets/style/add_task/add_task_resonsive.css
+++ b/assets/style/add_task/add_task_resonsive.css
@@ -62,6 +62,10 @@
         padding-top: 16px;
     }
 
+    .priority-edit {
+        padding-top: unset;
+    }
+
     .required {
         position: unset;
     }
